--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     </header>
     <div class="container">
 
+      <button id="clear">Reset</button>
+
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
